--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -75,13 +75,15 @@
                         <% }); %>
                     </select>
                     <label class="option-filter-title">Marca</label>
-                    <input name="marca" type="text" class="form-control">
+                    <input name="Marca" type="text" class="form-control">
                     <label class="option-filter-title">Nombre del solicitante</label>
                     <input name="n_solicitante" type="text" class="form-control">
                     <label class="option-filter-title">Nombre del representante</label>
                     <input name="n_representante" type="text" class="form-control">
-                    <label class="option-filter-title">Municipio</label>
-                    <input name="municipio" type="text" class="form-control">
+                    <label class="option-filter-title">Municipio del solicitante</label>
+                    <input name="m_solicitante" type="text" class="form-control">
+                    <label class="option-filter-title">Municipio del representante</label>
+                    <input name="m_representante" type="text" class="form-control">
                     <label class="option-filter-title">Teléfono</label>
                     <div class="form-check">
                         <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la casilla-->
