--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -133,20 +133,20 @@
                         <th scope="col">Fecha de solicitud</th>
                         <th scope="col">Fecha de registro</th>
                         <th scope="col">Fecha de vencimiento</th>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Teléfono</th>
-                        <th scope="col">Correo electrónico</th>
-                        <th scope="col">País</th>
-                        <th scope="col">Municipio</th>
-                        <th scope="col">Dirección</th>
-                        <th scope="col">Código postal</th>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Teléfono</th>
-                        <th scope="col">Correo electrónico</th>
-                        <th scope="col">País</th>
-                        <th scope="col">Municipio</th>
-                        <th scope="col">Dirección</th>
-                        <th scope="col">Código postal</th>
+                        <th scope="col">nombre del solicitante</th>
+                        <th scope="col">Teléfono del solicitante</th>
+                        <th scope="col">Correo electrónico del solicitante</th>
+                        <th scope="col">País del solicitante</th>
+                        <th scope="col">Municipio del solicitante</th>
+                        <th scope="col">Dirección del solicitante</th>
+                        <th scope="col">Código postal del solicitante</th>
+                        <th scope="col">nombre del representante</th>
+                        <th scope="col">Teléfono del representante</th>
+                        <th scope="col">Correo electrónico del representante</th>
+                        <th scope="col">País del representante</th>
+                        <th scope="col">Municipio del representante</th>
+                        <th scope="col">Dirección del representante</th>
+                        <th scope="col">Código postal del representante</th>
                     </tr>
                 </thead>
                 <tbody>
