--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -30,88 +30,140 @@
             </nav>
         </div>
         <!--Fin del header-->
+        <!--Inicio de los filtros-->
+        <div class="filter">
+            <form class="form-group row card-block" action="/dashboard" method="GET" id="filter">
+                <p>Filtros</p>
+                <div class="row marca">
+                    <div class="col">
+                        <label class="option-filter-title">Marca</label>
+                        <input name="Marca" type="text" class="form-control">
+                    </div>
+                    <div class="col">
+                        <label class="option-filter-title">Situación de la marca</label>
+                        <select class="form-select" name="Situacion">  
+                            <option value="null"></option>
+                            <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la opción en el dropdown-->
+                            <% situacion.forEach(function(s) { %>
+                                <% if(filter.situacion && filter.situacion == s.situacion_marca) { %>
+                                    <option selected value=<%= s.situacion_marca %> ><%= s.situacion_marca %></option>
+                                <% }else{ %>
+                                    <option value=<%= s.situacion_marca %>><%= s.situacion_marca %></option>
+                                <% } %>
+                            <% }); %>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <label class="option-filter-title">Número de Clasificación</label>
+                        <select class="form-select" name="Clasificacion">
+                            <option value="null"></option>
+                            <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la opción en el dropdown-->
+                            <% clasificacion.forEach(function(c) { %>
+                                <% if(filter.clasificacion && filter.clasificacion == c.clasificacion_niza) { %>
+                                    <option selected value=<%= c.clasificacion_niza %>><%= c.clasificacion_niza %></option>
+                                <% }else{ %>
+                                    <option value=<%= c.clasificacion_niza %>><%= c.clasificacion_niza %></option>
+                                <% } %>                            
+                            <% }); %>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <label class="option-filter-title">Número de clase</label>
+                        <select class="form-select" name="Clase">
+                            <option value="null"></option>
+                            <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la opción en el dropdown-->
+                            <% clase.forEach(function(c) { %>
+                                <% if(filter.clase && filter.clase == c.clase_marca) { %>
+                                    <option selected value=<%= c.clase_marca %>><%= c.clase_marca %></option>
+                                <% }else{ %>
+                                    <option value=<%= c.clase_marca %>><%= c.clase_marca %></option>
+                                <% } %>  
+                                
+                            <% }); %>
+                        </select>
+                    </div>
+                    <div class="col" ></div>
+                    <div class="col" ></div>
+                    <div class="col" ></div>
+                    <div class="col" ></div>
+                </div>
+                <div class="row sol-rep">
+                    <div class="col">
+                        <label class="option-filter-title">Nombre del solicitante</label>
+                        <input name="n_solicitante" type="text" class="form-control">
+                    </div>
+                    <div class="col">
+                        <label class="option-filter-title">Municipio del solicitante</label>
+                        <input name="m_solicitante" type="text" class="form-control">
+                    </div>
+                    <div class="col">
+                        <div class="form-check">
+                            <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la casilla-->
+                            <% if(filter.telefono && filter.telefono == "on") { %>
+                                <input class="form-check-input" type="checkbox" name="Telefono" checked>
+                            <% }else{ %>
+                                <input class="form-check-input" type="checkbox" name="Telefono">
+                            <% } %> 
+                            <label class="form-check-label">
+                                Teléfono del solicitante
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-check">
+                             <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la casilla-->
+                            <% if(filter.correo && filter.correo == "on") { %>
+                                <input class="form-check-input" type="checkbox" name="Correo" checked>
+                            <% }else{ %>
+                                <input class="form-check-input" type="checkbox" name="Correo">
+                            <% } %> 
+                            <label class="form-check-label">
+                                Correo del solicitante
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <label class="option-filter-title">Nombre del representante</label>
+                        <input name="n_representante" type="text" class="form-control">
+                    </div>
+                    <div class="col">
+                        <label class="option-filter-title">Municipio del representante</label>
+                        <input name="m_representante" type="text" class="form-control">
+                    </div>
+                    <div class="col">
+                        <div class="form-check">
+                            <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la casilla-->
+                            <% if(filter.telefono && filter.telefono == "on") { %>
+                                <input class="form-check-input" type="checkbox" name="Telefono" checked>
+                            <% }else{ %>
+                                <input class="form-check-input" type="checkbox" name="Telefono">
+                            <% } %> 
+                            <label class="form-check-label">
+                                Teléfono del representante
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-check">
+                             <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la casilla-->
+                            <% if(filter.correo && filter.correo == "on") { %>
+                                <input class="form-check-input" type="checkbox" name="Correo" checked>
+                            <% }else{ %>
+                                <input class="form-check-input" type="checkbox" name="Correo">
+                            <% } %> 
+                            <label class="form-check-label">
+                                Correo del representante
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <button type="submit" class="ds-button">Filtrar</button>
+            </form>
+        </div>
+        <!--Fin de los filtros-->
         <!--Inicio del content-->
         <!--la clase content almacena el el datatable y los filtros que se pueden aplicar-->
         <div class="content">
-            <!--Inicio de los filtros-->
-            <div class="filter">
-                <form action="/dashboard" method="GET" id="filter">
-                    <p>Filtros</p>
-                    <label class="option-filter-title">Situación de la marca</label>
-                    <select class="form-select" name="Situacion">  
-                        <option value="null"></option>
-                        <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la opción en el dropdown-->
-                        <% situacion.forEach(function(s) { %>
-                            <% if(filter.situacion && filter.situacion == s.situacion_marca) { %>
-                                <option selected value=<%= s.situacion_marca %> ><%= s.situacion_marca %></option>
-                            <% }else{ %>
-                                <option value=<%= s.situacion_marca %>><%= s.situacion_marca %></option>
-                            <% } %>
-                        <% }); %>
-                    </select>
-                    <label class="option-filter-title">Número de Clasificación</label>
-                    <select class="form-select" name="Clasificacion">
-                        <option value="null"></option>
-                        <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la opción en el dropdown-->
-                        <% clasificacion.forEach(function(c) { %>
-                            <% if(filter.clasificacion && filter.clasificacion == c.clasificacion_niza) { %>
-                                <option selected value=<%= c.clasificacion_niza %>><%= c.clasificacion_niza %></option>
-                            <% }else{ %>
-                                <option value=<%= c.clasificacion_niza %>><%= c.clasificacion_niza %></option>
-                            <% } %>                            
-                        <% }); %>
-                    </select>
-                    <label class="option-filter-title">Número de clase</label>
-                    <select class="form-select" name="Clase">
-                        <option value="null"></option>
-                        <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la opción en el dropdown-->
-                        <% clase.forEach(function(c) { %>
-                            <% if(filter.clase && filter.clase == c.clase_marca) { %>
-                                <option selected value=<%= c.clase_marca %>><%= c.clase_marca %></option>
-                            <% }else{ %>
-                                <option value=<%= c.clase_marca %>><%= c.clase_marca %></option>
-                            <% } %>  
-                            
-                        <% }); %>
-                    </select>
-                    <label class="option-filter-title">Marca</label>
-                    <input name="Marca" type="text" class="form-control">
-                    <label class="option-filter-title">Nombre del solicitante</label>
-                    <input name="n_solicitante" type="text" class="form-control">
-                    <label class="option-filter-title">Nombre del representante</label>
-                    <input name="n_representante" type="text" class="form-control">
-                    <label class="option-filter-title">Municipio del solicitante</label>
-                    <input name="m_solicitante" type="text" class="form-control">
-                    <label class="option-filter-title">Municipio del representante</label>
-                    <input name="m_representante" type="text" class="form-control">
-                    <label class="option-filter-title">Teléfono</label>
-                    <div class="form-check">
-                        <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la casilla-->
-                        <% if(filter.telefono && filter.telefono == "on") { %>
-                            <input class="form-check-input" type="checkbox" name="Telefono" checked>
-                        <% }else{ %>
-                            <input class="form-check-input" type="checkbox" name="Telefono">
-                        <% } %> 
-                        <label class="form-check-label">
-                        Disponible
-                        </label>
-                    </div>
-                    <label class="option-filter-title">Correo</label>
-                    <div class="form-check">
-                         <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la casilla-->
-                        <% if(filter.correo && filter.correo == "on") { %>
-                            <input class="form-check-input" type="checkbox" name="Correo" checked>
-                        <% }else{ %>
-                            <input class="form-check-input" type="checkbox" name="Correo">
-                        <% } %> 
-                        <label class="form-check-label">
-                        Disponible
-                        </label>
-                    </div>
-                    <button type="submit" class="ds-button">Filtrar</button>
-                </form>
-            </div>
-            <!--Fin de los filtros-->
             <!--Inicio de la tabla-->
             <table class="table" id="marcas" class="table table-striped">
                 <thead>
@@ -212,6 +264,7 @@
     <script>
         $(document).ready( function () {
         $('#marcas').DataTable({
+            "deferRender": true,
             "responsive": true,
             //Habilita la paginación en el datatable
             "paging": true,
