--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -84,8 +84,6 @@
                     </div>
                     <div class="col" ></div>
                     <div class="col" ></div>
-                    <div class="col" ></div>
-                    <div class="col" ></div>
                 </div>
                 <div class="row sol-rep">
                     <div class="col">
@@ -95,32 +93,6 @@
                     <div class="col">
                         <label class="option-filter-title">Municipio del solicitante</label>
                         <input name="m_solicitante" type="text" class="form-control">
-                    </div>
-                    <div class="col">
-                        <div class="form-check">
-                            <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la casilla-->
-                            <% if(filter.telefono && filter.telefono == "on") { %>
-                                <input class="form-check-input" type="checkbox" name="Telefono" checked>
-                            <% }else{ %>
-                                <input class="form-check-input" type="checkbox" name="Telefono">
-                            <% } %> 
-                            <label class="form-check-label">
-                                Teléfono del solicitante
-                            </label>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-check">
-                             <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la casilla-->
-                            <% if(filter.correo && filter.correo == "on") { %>
-                                <input class="form-check-input" type="checkbox" name="Correo" checked>
-                            <% }else{ %>
-                                <input class="form-check-input" type="checkbox" name="Correo">
-                            <% } %> 
-                            <label class="form-check-label">
-                                Correo del solicitante
-                            </label>
-                        </div>
                     </div>
                     <div class="col">
                         <label class="option-filter-title">Nombre del representante</label>
@@ -139,7 +111,7 @@
                                 <input class="form-check-input" type="checkbox" name="Telefono">
                             <% } %> 
                             <label class="form-check-label">
-                                Teléfono del representante
+                                Teléfono
                             </label>
                         </div>
                     </div>
@@ -152,7 +124,7 @@
                                 <input class="form-check-input" type="checkbox" name="Correo">
                             <% } %> 
                             <label class="form-check-label">
-                                Correo del representante
+                                Correo
                             </label>
                         </div>
                     </div>
