se valido en los datapicker que solo se pudieran seleccionar el rango de fechas disponible en la base de datos

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -43,15 +43,15 @@
                         <form id="busqueda" method="GET" action="/dashboard">
                             <label class="form-label">Fecha de solicitud</label>
                             <div class="input-group">
-                                <input name="fsStart" type="text" class="form-control datepicker" aria-describedby="basic-addon3">
+                                <input name="fsStart" type="text" class="form-control fsDatepicker" aria-describedby="basic-addon3">
                                 <span class="input-group-text">-</span>
-                                <input name="fsEnd" type="text" class="form-control datepicker" aria-describedby="basic-addon3">
+                                <input name="fsEnd" type="text" class="form-control fsDatepicker" aria-describedby="basic-addon3">
                             </div>
                             <label class="form-label">Fecha de registro</label>
                             <div class="input-group">
-                                <input name="frStart" type="text" class="form-control datepicker" aria-describedby="basic-addon3">
+                                <input name="frStart" type="text" class="form-control frDatepicker" aria-describedby="basic-addon3">
                                 <span class="input-group-text">-</span>
-                                <input name="frEnd" type="text" class="form-control datepicker" aria-describedby="basic-addon3">
+                                <input name="frEnd" type="text" class="form-control frDatepicker" aria-describedby="basic-addon3">
                             </div>
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                                 <button type="submit" class="btn btn-info" >Buscar</button>
@@ -80,10 +80,18 @@
 
     <script>
         $(document).ready(function(){
-            $('.datepicker').datepicker({
+            $('.frDatepicker').datepicker({
                 language: "es",
                 format: 'dd/mm/yyyy',
-                endDate: new Date()
+                endDate: JSON.parse('<%- JSON.stringify(frEnd) %>'),
+                startDate:  JSON.parse('<%- JSON.stringify(frStart) %>')
+            });
+
+            $('.fsDatepicker').datepicker({
+                language: "es",
+                format: 'dd/mm/yyyy',
+                endDate: JSON.parse('<%- JSON.stringify(fsEnd) %>'),
+                startDate:  JSON.parse('<%- JSON.stringify(fsStart) %>')
             });
         });
     </script>
