se corrigio el error donde al filtrar la tabla se perdian las fechas establecidas

--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -129,6 +129,10 @@
                         </div>
                     </div>
                 </div>
+                <input class="form-control" name="fsStart" type="hidden" value="<%= fsStart %>">
+                <input class="form-control" name="fsEnd" type="hidden" value="<%= fsEnd %>">
+                <input class="form-control" name="frStart" type="hidden" value="<%= frStart %>">
+                <input class="form-control" name="frEnd" type="hidden" value="<%= frEnd %>">
                 <button type="submit" class="ds-button">Filtrar</button>
             </form>
         </div>
