--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -32,16 +32,16 @@
         <!--Fin del header-->
         <!--Inicio de los filtros-->
         <div class="filter">
-            <form class="form-group row card-block" action="/dashboard" method="GET" id="filter">
+            <form class="form-group row card-block" action="/dashboard" method="GET" id="filter" enctype="multipart/form-data">
                 <p>Filtros</p>
-                <div class="row marca">
-                    <div class="col">
+                <div class="row align-items-center">
+                    <div class="col-auto">
                         <label class="option-filter-title">Marca</label>
-                        <input name="Marca" type="text" class="form-control">
+                        <input name="marca" type="text" class="form-control">
                     </div>
-                    <div class="col">
+                    <div class="col-auto">
                         <label class="option-filter-title">Situación de la marca</label>
-                        <select class="form-select" name="Situacion">  
+                        <select class="form-select" name="situacion">  
                             <option value="null"></option>
                             <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la opción en el dropdown-->
                             <% situacion.forEach(function(s) { %>
@@ -53,9 +53,9 @@
                             <% }); %>
                         </select>
                     </div>
-                    <div class="col">
+                    <div class="col-auto">
                         <label class="option-filter-title">Número de Clasificación</label>
-                        <select class="form-select" name="Clasificacion">
+                        <select class="form-select" name="clasificacion">
                             <option value="null"></option>
                             <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la opción en el dropdown-->
                             <% clasificacion.forEach(function(c) { %>
@@ -67,9 +67,9 @@
                             <% }); %>
                         </select>
                     </div>
-                    <div class="col">
+                    <div class="col-auto">
                         <label class="option-filter-title">Número de clase</label>
-                        <select class="form-select" name="Clase">
+                        <select class="form-select" name="clase">
                             <option value="null"></option>
                             <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la opción en el dropdown-->
                             <% clase.forEach(function(c) { %>
@@ -82,49 +82,75 @@
                             <% }); %>
                         </select>
                     </div>
-                    <div class="col" ></div>
-                    <div class="col" ></div>
                 </div>
-                <div class="row sol-rep">
-                    <div class="col">
+                <div class="row align-items-center">
+                    <div class="col-auto">
                         <label class="option-filter-title">Nombre del solicitante</label>
                         <input name="n_solicitante" type="text" class="form-control">
                     </div>
-                    <div class="col">
+                    <div class="col-auto">
                         <label class="option-filter-title">Municipio del solicitante</label>
                         <input name="m_solicitante" type="text" class="form-control">
                     </div>
-                    <div class="col">
-                        <label class="option-filter-title">Nombre del representante</label>
-                        <input name="n_representante" type="text" class="form-control">
-                    </div>
-                    <div class="col">
-                        <label class="option-filter-title">Municipio del representante</label>
-                        <input name="m_representante" type="text" class="form-control">
-                    </div>
-                    <div class="col">
+                    <div class="col-auto">
                         <div class="form-check">
                             <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la casilla-->
-                            <% if(filter.telefono && filter.telefono == "on") { %>
-                                <input class="form-check-input" type="checkbox" name="Telefono" checked>
+                            <% if(filter.telefono_solicitante && filter.telefono_solicitante == "on") { %>
+                                <input class="form-check-input" type="checkbox" name="telefono_solicitante" checked>
                             <% }else{ %>
-                                <input class="form-check-input" type="checkbox" name="Telefono">
+                                <input class="form-check-input" type="checkbox" name="telefono_solicitante">
                             <% } %> 
                             <label class="form-check-label">
-                                Teléfono
+                                Teléfono del solicitante
                             </label>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-auto">
                         <div class="form-check">
                              <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la casilla-->
-                            <% if(filter.correo && filter.correo == "on") { %>
-                                <input class="form-check-input" type="checkbox" name="Correo" checked>
+                            <% if(filter.correo_solicitante && filter.correo_solicitante == "on") { %>
+                                <input class="form-check-input" type="checkbox" name="correo_solicitante" checked>
                             <% }else{ %>
-                                <input class="form-check-input" type="checkbox" name="Correo">
+                                <input class="form-check-input" type="checkbox" name="correo_solicitante">
                             <% } %> 
                             <label class="form-check-label">
-                                Correo
+                                Correo del solicitante
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-auto">
+                        <label class="option-filter-title">Nombre del representante</label>
+                        <input name="n_representante" type="text" class="form-control">
+                    </div>
+                    <div class="col-auto">
+                        <label class="option-filter-title">Municipio del representante</label>
+                        <input name="m_representante" type="text" class="form-control">
+                    </div>
+                    <div class="col-auto">
+                        <div class="form-check">
+                             <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la casilla-->
+                            <% if(filter.correo_representante && filter.correo_representante == "on") { %>
+                                <input class="form-check-input" type="checkbox" name="correo_representante" checked>
+                            <% }else{ %>
+                                <input class="form-check-input" type="checkbox" name="correo_representante">
+                            <% } %> 
+                            <label class="form-check-label">
+                                Correo del representante
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col-auto">
+                        <div class="form-check">
+                            <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la casilla-->
+                            <% if(filter.telefono_representante && filter.telefono_representante == "on") { %>
+                                <input class="form-check-input" type="checkbox" name="telefono_representante" checked>
+                            <% }else{ %>
+                                <input class="form-check-input" type="checkbox" name="telefono_representante">
+                            <% } %> 
+                            <label class="form-check-label">
+                                Teléfono del representante
                             </label>
                         </div>
                     </div>
@@ -134,7 +160,7 @@
                 <input class="form-control" name="frStart" type="hidden" value="<%= frStart %>">
                 <input class="form-control" name="frEnd" type="hidden" value="<%= frEnd %>">
                 <button id="delete-filter" type="button" class="btn btn-danger">Eliminar filtros</button>
-                <button type="submit" class="ds-button">Filtrar</button>    
+                <button id="filtrar" type="submit" class="ds-button">Filtrar</button>    
             </form>
         </div>
         <!--Fin de los filtros-->
@@ -235,7 +261,6 @@
     <script src="https://cdn.datatables.net/buttons/1.6.5/js/dataTables.buttons.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.html5.min.js"></script>
-
 
     <!--Script para limpiar los filtros del datatable-->
     <script>
