corrección en el campo de la clase

--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -68,7 +68,7 @@
                         </select>
                     </div>
                     <div class="col-auto">
-                        <label class="option-filter-title">Número de clase</label>
+                        <label class="option-filter-title">Tipo de clase</label>
                         <select class="form-select" name="clase">
                             <option value="null"></option>
                             <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la opción en el dropdown-->
