--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -37,12 +37,12 @@
                 <div class="row align-items-center">
                     <div class="col-auto">
                         <label class="option-filter-title">Marca</label>
-                        <input name="marca" type="text" class="form-control">
+                        <input name="marca" type="text" class="form-control" autocomplete="off">
                     </div>
                     <div class="col-auto">
                         <label class="option-filter-title">Situación de la marca</label>
                         <select class="form-select" name="situacion">  
-                            <option value="null"></option>
+                            <option></option>
                             <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la opción en el dropdown-->
                             <% situacion.forEach(function(s) { %>
                                 <% if(filter.situacion && filter.situacion == s.situacion_marca) { %>
@@ -56,7 +56,7 @@
                     <div class="col-auto">
                         <label class="option-filter-title">Número de Clasificación</label>
                         <select class="form-select" name="clasificacion">
-                            <option value="null"></option>
+                            <option></option>
                             <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la opción en el dropdown-->
                             <% clasificacion.forEach(function(c) { %>
                                 <% if(filter.clasificacion && filter.clasificacion == c.clasificacion_niza) { %>
@@ -70,7 +70,7 @@
                     <div class="col-auto">
                         <label class="option-filter-title">Tipo de DPI</label>
                         <select class="form-select" name="dpi">
-                            <option value="null"></option>
+                            <option></option>
                             <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la opción en el dropdown-->
                             <% dpi.forEach(function(c) { %>
                                 <% if(filter.dpi && filter.dpi == c.tipo_dpi) { %>
@@ -85,7 +85,7 @@
                     <div class="col-auto">
                         <label class="option-filter-title">Tipo de marca</label>
                         <select class="form-select" name="tipo_marca">
-                            <option value="null"></option>
+                            <option></option>
                             <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la opción en el dropdown-->
                             <% tipo_marca.forEach(function(c) { %>
                                 <% if(filter.tipo_marca && filter.tipo_marca == c.tipo_marca) { %>
@@ -100,7 +100,7 @@
                     <div class="col-auto">
                         <label class="option-filter-title">Tipo de clase</label>
                         <select class="form-select" name="clase">
-                            <option value="null"></option>
+                            <option></option>
                             <!--Se valida si antes de cargar la página ya se han aplicado filtros y en caso de ser así selecciona la opción en el dropdown-->
                             <% clase.forEach(function(c) { %>
                                 <% if(filter.clase && filter.clase == c.clase_marca) { %>
@@ -129,11 +129,11 @@
                 <div class="row align-items-center">
                     <div class="col-auto">
                         <label class="option-filter-title">Nombre del solicitante</label>
-                        <input name="n_solicitante" type="text" class="form-control">
+                        <input name="n_solicitante" type="text" class="form-control" autocomplete="off">
                     </div>
                     <div class="col-auto">
                         <label class="option-filter-title">Municipio del solicitante</label>
-                        <input name="m_solicitante" type="text" class="form-control">
+                        <input name="m_solicitante" type="text" class="form-control" autocomplete="off">
                     </div>
                     <div class="col-auto">
                         <div class="form-check">
@@ -165,11 +165,11 @@
                 <div class="row align-items-center">
                     <div class="col-auto">
                         <label class="option-filter-title">Nombre del representante</label>
-                        <input name="n_representante" type="text" class="form-control">
+                        <input name="n_representante" type="text" class="form-control" autocomplete="off">
                     </div>
                     <div class="col-auto">
                         <label class="option-filter-title">Municipio del representante</label>
-                        <input name="m_representante" type="text" class="form-control">
+                        <input name="m_representante" type="text" class="form-control" autocomplete="off">
                     </div>
                     <div class="col-auto">
                         <div class="form-check">
