--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -26,7 +26,8 @@
         <!--Inicio del header-->
         <div class="header">
             <nav class="navbar fixed-top  navbar-expand-lg navbar-light bg-tm">
-                <p><b>Brandium</b></p>
+                
+                <p><b><a href="/" style="text-decoration:none; color: black;">Brandium</a></b></p>
             </nav>
         </div>
         <!--Fin del header-->
@@ -203,7 +204,7 @@
                 <input class="form-control" name="frStart" type="hidden" value="<%= frStart %>">
                 <input class="form-control" name="frEnd" type="hidden" value="<%= frEnd %>">
                 <button id="delete-filter" type="button" class="btn btn-danger">Eliminar filtros</button>
-                <button id="filtrar" type="submit" class="ds-button">Filtrar</button>    
+                <button id="filtrar" type="submit" class="ds-button">Filtrar</button> 
             </form>
         </div>
         <!--Fin de los filtros-->
